<resources>
    <string name="app_name">CameraShooter</string>
    <string name="welcome">Welcome</string>
    <string name="join_game">Join Game</string>
    <string name="send">Send</string>
    <string name="enter_server_ip">Enter server IP</string>
    <string name="shop">shop</string>
    <string name="guns">Guns</string>
    <string name="scopes">Scopes</string>
    <string name="magazines">Magazines</string>
    <string name="price">Price</string>
    <string name="element_name">Element Name</string>
    <string name="purchase">purchase</string>
    <string name="equip">equip</string>
</resources>
