<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:layout_margin="30dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="80dp">

            <Button
                android:id="@+id/join_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/join_game"
                android:textSize="30sp"
                android:textStyle="bold"
                android:padding="20sp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/button_style"
                android:onClick="onClick"/>

            <Button
                android:id="@+id/shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shop"
                android:textSize="30sp"
                android:textStyle="bold"
                android:padding="20sp"
                android:layout_marginTop="20sp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/button_style"
                android:onClick="onClick"/>

        </LinearLayout>

</LinearLayout>